--- a/_css/main.css
+++ b/_css/main.css
@@ -1,62 +1,83 @@
-body {
-    font-family: Arial,sans-serif;
-    color: black;
-    font-size: 20px;
-    padding-left: 160px;
-    padding-right: 160px;
-    margin-top: 0;
-    margin-bottom: 0;
+aside, article, section, header, footer, nav{
+    display: block;
+}
+
+div, h1, h2, h3, p, img {
+    margin: 0;
+    padding: 0;
+}
+
+html {
+    margin: 0;
+    padding: 0;
     background-image: url("../_images/IMG_craigsPic.jpeg");
     background-size: cover;
 }
 
-h1 {
-    font-size: 30px;
-    /*background: darkgreen;*/
-    padding-left: 10px;
-    padding-right: 10px;
+body {
+    padding: 0;
+    font-family: Arial,sans-serif;
+    background: rgb(255, 255, 255);
+    width: 1000px;
+    height: auto;
+    margin: 0 auto;
+}
+
+header {
+    padding: 20px 25px;
+    background: rgb(76,67,65);
+}
+
+header p {
+    color: rgb(255, 255, 255);
+    text-align: left;
     margin: 0;
+}
+
+article {
+    padding: 0 25px;
+    margin-top: 25px;
+}
+
+h1 {
+    font-size: 1.6em;
+    font-weight: normal;
+    color: rgb(255,255,255);
 }
 
 h2 {
-    text-align: center;
-    font-size: 40px;
-    padding-top: 10px;
-    margin: 0;
+    font: 1.2em Arial, Helvetica, sans-serif;
+    margin-bottom: .4em;
 }
 
 h3 {
-    text-align: right;
-    padding-right: 100px;
+    font: 1.6em Arial, Helvetica, sans-serif;
+    margin-bottom: .4em;
+    font-weight: bold;
+    border-bottom: 1px solid black;
 }
 
-h4 {
-    text-align: right;
-    padding-right: 100px;
-    font-size: 16px
-    margin: 0;
-    padding: 10px;
-}
-
-li {
-    list-style-type: none;
+section.paragraph {
+    padding-left: 37px;
+    margin: 12px;
+    font-weight: normal;
 }
 
 p {
-    padding: 10px;
-    margin: 0;
-
+    margin-bottom: 1em;
+    line-height: 1.6;
 }
 
-div {
-    background: lightgrey;
+nav {
+    width: 100%;
+    margin: 0;
 }
 
 nav ul {
     margin: 0;
     padding: 0;
     overflow: hidden;
-    background-color: #333333;
+    background-color: #111111;
 }
 
 nav li {
@@ -72,13 +93,24 @@ nav li a {
 }
 
 nav li a:hover {
-    background-color: #111111;
+    background-color: #000000;
 }
+
+ul {
+    margin: 0;
+    margin-bottom: 5px;
+}
+
+li {
+    list-style-type: none;
+}
+
+
 /* Style the tab */
 div.tab {
     overflow: hidden;
-    border: 1px solid #ccc;
-    background-color: #f1f1f1;
+    padding: 5px;
+    background-color: lightgrey;
 }
 
 /* Style the buttons inside the tab */
@@ -95,31 +127,34 @@ div.tab button {
 
 /* Change background color of buttons on hover */
 div.tab button:hover {
-    background-color: #ddd;
+    background-color: rgb(70, 69, 70);
 }
 
 /* Create an active/current tablink class */
 div.tab button.active {
-    background-color: #ccc;
+    background-color: rgb(70, 69, 70);
 }
 
 /* Style the tab content */
-.tabcontent {
+div.tabcontent {
     display: none;
-    padding: 6px 12px;
-    border: 1px solid #ccc;
-    border-top: none;
+    margin: 0 25px;
+    margin-top: 25px;
 }
 
 div.gallery {
-    margin: 5px;
-    border: 1px solid #ccc;
+    margin-left: 5px;
+    margin-right: 5px;
+    margin-top: 15px;
+    border: 5px solid #000000;
     float: left;
-    width: 180px;
+    width: 215px;
+    height: 215px;
+    padding: 0px;
 }
 
 div.gallery:hover {
-    border: 1px solid #777;
+    border: 5px solid darkgrey;
 }
 
 div.gallery img {
@@ -127,10 +162,17 @@ div.gallery img {
     height: auto;
 }
 
-div.desc {
-    padding: 15px;
-    text-align: center;
+footer {
+    margin-top: 25px;
+    clear: both;
+    padding: 10px 25px;
+    background: rgb(76,67,65);
 }
 
-/*for creating boxes next to each other.
-https://stackoverflow.com/questions/17217766/two-divs-side-by-side-fluid-display*/
+footer p {
+    margin: 0;
+    padding-right: 10px;
+    text-align: right;
+    font-size: 10px;
+    font-style: italic;
+}
